<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:background="@color/white"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".addreport">

    <ScrollView
        android:id="@+id/Scroller"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="parent">

            <FrameLayout
                android:id="@+id/farmeAM"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:background="@drawable/btn">

                <View
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/btn" />

                <TextView
                    android:id="@+id/deceline"
                    android:text="@string/back1"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:layout_marginTop="16dp"
                    android:layout_marginStart="20dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_width="70dp"
                    android:layout_height="30dp"
                    android:gravity="center"
                    android:textColor="@color/white"
                    android:background="@drawable/back_btn_pressed"/>
            </FrameLayout>

            <EditText
                android:id="@+id/editextmain"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:ems="10"
                android:hint="@string/name"
                android:importantForAutofill="no"
                android:inputType="text"
                android:maxLength="30"
                android:minHeight="48dp"
                android:textSize="22sp"
                android:textColorHint="#78909C"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/deceline" />

            <EditText
                android:id="@+id/editextdesc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                android:ems="10"
                android:hint="@string/description"
                android:importantForAutofill="no"
                android:inputType="textMultiLine"
                android:minHeight="48dp"
                app:layout_constraintTop_toBottomOf="@+id/editextmain" />

            <TextView
                android:id="@+id/update"
                android:layout_width="150dp"
                android:layout_height="40dp"
                android:gravity="center"
                android:layout_gravity="center"
                android:layout_marginEnd="0dp"
                android:layout_marginTop="10dp"
                android:textSize="17sp"
                android:textColor="@color/white"
                android:background="@drawable/but_true_pressed"
                android:layout_marginBottom="10dp"
                android:text="@string/update"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>