<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id = "@+id/main"
    android:background="@color/white"
    tools:context=".read">

    <ScrollView
        android:id="@+id/Scroller"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <FrameLayout
                android:id="@+id/farmeAM"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:background="@drawable/btn">

            <View
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/btn" />

                <TextView
                    android:id="@+id/back"
                    android:layout_width="70dp"
                    android:layout_height="30dp"
                    android:gravity="center"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/back1"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    android:textColor="@color/white"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:background="@drawable/back_btn_pressed"/>
            </FrameLayout>

            <TextView
                android:id="@+id/textmain"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:ems="10"
                android:maxLength="30"
                android:textSize="22sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/back" />

            <TextView
                android:id="@+id/textdesc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:ems="10"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textmain" />

            <TextView
                android:id="@+id/updater"
                android:layout_width="150dp"
                android:layout_height="40dp"
                android:layout_gravity="start"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:text="@string/update"
                android:textSize="17sp"
                android:textStyle="bold"
                android:gravity="center"
                android:textColor="@color/white"
                android:background="@drawable/but_true_pressed"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/deliter"
                android:layout_width="150dp"
                android:layout_height="40dp"
                android:layout_marginTop="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginBottom="15dp"
                android:text="@string/deliter"
                android:gravity="center"
                android:background="@drawable/but_false_pressed"
                android:textSize="17sp"
                android:textStyle="normal"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:textAlignment="center" />

        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>